# PCILeechFWGenerator

./: .coveragerc  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  BUGFIX_SUMMARY.md  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.rst  Containerfile  DEMO_README.md  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  REFACTORING_PLAN.md  SECURITY.md  build_vfio_constants.sh  cliff.toml  demo_visualize_coe.py  demo_visualize_coe_auto.py  entrypoint.sh  force_vfio_binds.sh  help_ticket.sh  pcileech.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-security.txt  requirements-test.txt  run_tests.sh  setup.cfg  test_cfg_shadow_debug.py
.claude/: settings.json
.claude/agents/: hardware-safety-reviewer.md
.github/: BUG_511_FIX_SUMMARY.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: auto-version-update.yml  consolidated-ci.yml  datadog.yml  e2e-testing.yml  release.yml  security.yml  stale.yml  tcl-generation-e2e.yml
docs/plans/: issue-593-xilinx-defaults-fifo.md
scripts/: analyze_imports.py  build_container.sh  build_release.sh  ci_tcl_generation.py  e2e_test_github_actions.py  generate_pypi_package.py  validate_template_security.py  validate_template_syntax.py  validate_template_variables.py  vfio_container_manager.py  visualize_coe.py
src/: __version__.py  build.py  build_cli.py  build_helpers.py  error_utils.py  exceptions.py  log_config.py  pcileech_core_discovery.py  pcileech_main.py  shell.py  string_utils.py
src/behavioral/: analyzer.py  base.py  network_behavioral.py  storage_behavioral.py
src/cli/: build_wrapper.py  cli.py  config.py  container.py  host_device_collector.py  version_checker.py  vfio.py  vfio_constants.py  vfio_diagnostics.py  vfio_handler.py  vfio_helpers.py
src/device_clone/: __init__.py  bar_content_generator.py  bar_size_converter.py  behavior_profiler.py  config_space_manager.py  constants.py  device_config.py  device_info_lookup.py  donor_capability_extractor.py  donor_info_template.py  fallback_manager.py  hex_constants.py  hex_formatter.py  msix.py  msix_capability.py  overlay_mapper.py  overlay_utils.py  payload_size_config.py  pcileech_context.py  pcileech_generator.py  sysfs_bar_reader.py  variance_manager.py  writemask_generator.py
src/file_management/: board_discovery.py  donor_dump_manager.py  file_manager.py  option_rom_manager.py  repo_manager.py  template_discovery.py
src/host_collect/: collector.py
src/pci_capability/: _pruning.py  compat.py  constants.py  dynamic_functions.py  msix.py  msix_bar_validator.py  processor.py  rules.py
src/scripts/: driver_scrape.py  kernel_utils.py  state_machine_extractor.py
src/templates/: __init__.py  template_mapping.py
src/templating/: advanced_sv_error.py  advanced_sv_features.py  advanced_sv_generator.py  advanced_sv_perf.py  advanced_sv_power.py  compat.py  device_signature_validator.py  diagnostics.py  sv_config.py  sv_constants.py  sv_context_builder.py  sv_module_generator.py  sv_overlay_generator.py  sv_validator.py  systemverilog_generator.py  tcl_builder.py  template_context_validator.py  template_renderer.py
src/tui/: main.py
src/utils/: behavioral_context.py  coe_report.py  context_driver_enrichment.py  context_error_messages.py  error_messages.py  error_recovery.py  log_phases.py  memory_monitor.py  metadata.py  post_build_validator.py  system_status.py  template_validator.py  unified_context.py  validation_constants.py  validators.py  version_resolver.py  vfio_decision.py  vfio_retry.py
tests/: conftest.py  test_advanced_sv_perf.py  test_bar_controller_index_serving.py  test_bar_implementation_generation.py  test_behavior_profiler.py  test_behavioral.py  test_board_discovery_sys_clk_pins.py  test_board_source_generation.py  test_build.py  test_build_additions.py  test_build_cli_entry.py  test_build_comprehensive.py  test_build_context_strict.py  test_build_helpers_unit.py  test_build_logger.py  test_build_preloaded_config.py  test_build_state_cleaner.py  test_build_wrapper.py  test_cfg_shadow_template.py  test_cfgspace_bar_index.py  test_cli_build_wrapper.py  test_coe_report.py  test_config_only_architecture.py  test_config_space_manager.py  test_config_space_manager_advanced.py  test_config_space_manager_robust.py  test_constraints_template_sys_clk_pins.py  test_container_build_flow.py  test_container_unit.py  test_context_manager_fixes.py  test_device_config.py  test_device_function_analyzers.py  test_device_id_propagation.py  test_device_info_lookup.py  test_donor_capability_extractor.py  test_donor_dump_manager.py  test_donor_info_template.py  test_ext_cap_handlers.py  test_fifo_donor_patcher.py  test_file_manager.py  (+57 more)
tests/e2e/: conftest.py  (+7 more)
(+121 files in other folders)
