[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "PCILeechFWGenerator"
description = "Generate spoofed PCIe DMA firmware from real donor hardware"
authors = [
    {name = "Ramsey McGrath", email = "ramsey@voltcyclone.info"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]
dependencies = [
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "jinja2>=3.1.0",
    "PyYAML>=6.0.0",
    "colorlog>=6.7.0",
    "typing_extensions>=4.0.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://pcileechfwgenerator.voltcyclone.info"
Source = "https://github.com/voltcyclone/PCILeechFWGenerator"
"Bug Tracker" = "https://github.com/voltcyclone/PCILeechFWGenerator/issues"

[project.optional-dependencies]
tui = [
    "textual>=4.0.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
]
testing = [
    "setuptools",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "packaging>=23.0",
]
# Alias of "testing" so `pip install -e .[test]` works. Inlined rather than
# referencing PCILeechFWGenerator[testing] to avoid self-referential extras
# that some resolver versions struggle with.
test = [
    "setuptools",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "packaging>=23.0",
]
# Full development environment: testing + tui + lint/format/type/security tools.
dev = [
    # testing
    "setuptools",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "packaging>=23.0",
    # tui
    "textual>=4.0.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    # dev tooling
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-import-order>=0.18.0",
    "mypy>=1.0.0",
    "types-psutil>=5.9.0",
    "types-setuptools>=68.0.0",
    "pre-commit>=3.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "wheel>=0.40.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

[project.scripts]
pcileech = "pcileechfwgenerator.pcileech_main:main"
pcileech-generate = "pcileechfwgenerator.pcileech_main:main"
pcileech-build = "pcileechfwgenerator.pcileech_main:main"
pcileech-tui = "pcileechfwgenerator.pcileech_main:main"

[tool.setuptools_scm]
# Single source of truth for the package version: derived from git tags.
# setuptools-scm writes the resolved version to src/_version.py at build /
# editable-install time; the file is gitignored. See src/__version__.py for
# the runtime accessor.
version_scheme = "no-guess-dev"
version_file = "src/_version.py"

[tool.setuptools]
py-modules = ["pcileech"]
package-dir = {"pcileechfwgenerator" = "src"}
packages = [
    "pcileechfwgenerator",
    "pcileechfwgenerator.behavioral",
    "pcileechfwgenerator.cli",
    "pcileechfwgenerator.device_clone",
    "pcileechfwgenerator.file_management",
    "pcileechfwgenerator.host_collect",
    "pcileechfwgenerator.pci_capability",
    "pcileechfwgenerator.scripts",
    "pcileechfwgenerator.templating",
    "pcileechfwgenerator.tui",
    "pcileechfwgenerator.tui.commands",
    "pcileechfwgenerator.tui.core",
    "pcileechfwgenerator.tui.models",
    "pcileechfwgenerator.tui.plugins",
    "pcileechfwgenerator.tui.plugins.examples",
    "pcileechfwgenerator.tui.utils",
    "pcileechfwgenerator.tui.widgets",
    "pcileechfwgenerator.utils",
    "pcileechfwgenerator.vivado_handling",
]

[tool.pylint.messages_control]
# Disable the line-too-long check
# Disable the unused-import check
disable = [
    "line-too-long",
    "unused-import",
    "missing-module-docstring",
    "missing-function-docstring",
]

[tool.pylint.format]
max-line-length = 120

# check-manifest verifies sdist contents match the VCS tree. Two
# legitimate omissions:
#   - src/_version.py is generated by setuptools-scm at build time and
#     deliberately gitignored.
#   - .cleanthat/ holds linter config that has no place in a wheel/sdist.
[tool.check-manifest]
ignore = [
    "src/_version.py",
    ".cleanthat",
    ".cleanthat/*",
    ".cleanthat/**",
]
